# RLearn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: RLearn_pytest.yml
rlearn/sports/: main_class.py  pytest_main_class.py
rlearn/sports/output/sarsa_attacker/test/: config.json
rlearn/sports/soccer/: dataclass.py
rlearn/sports/soccer/application/: q_values_movie.py
rlearn/sports/soccer/class_weight/: class_weight.py
rlearn/sports/soccer/main_class_soccer/: main.py  run_rlearn_config.py  run_rlearn_helpers.py
rlearn/sports/soccer/models/: dqn.py  dqn_pvss.py  qmix.py  sarsa.py
rlearn/sports/soccer/modules/datamodule/: jleague_only_attackers.py
rlearn/sports/soccer/modules/seq2seq_encoder/: pytorch_seq2seq_wrapper.py
rlearn/sports/soccer/modules/state_action_tokenizer/: state_action_tokenizer.py
rlearn/sports/soccer/torch/: __init__.py
test/config/: exp_config.json  exp_config_qmix.json  preprocessing_dssports2020.json  preprocessing_statsbomb_skillcorner2024.json
test/data/datastadium_simple_obs_action_seq/: exponential_beta0.9.pt
test/data/dss/clean_data/0001/: events.csv  player_info.csv
test/data/dss_simple_obs_action_seq/split/mini/: cache-2907ee40a9ff9f3c_00000_of_00008.arrow  cache-2907ee40a9ff9f3c_00001_of_00008.arrow  cache-2907ee40a9ff9f3c_00003_of_00008.arrow  cache-2907ee40a9ff9f3c_00004_of_00008.arrow  cache-2907ee40a9ff9f3c_00005_of_00008.arrow  cache-2907ee40a9ff9f3c_00006_of_00008.arrow  cache-2907ee40a9ff9f3c_00007_of_00008.arrow  cache-4c9a8da4f65a2bf4_00000_of_00008.arrow  (+43 more)
(+40 files in other folders)
